--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.11",
     "@reduxjs/toolkit": "^2.2.1",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.6.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
+    "next-redux-wrapper": "^8.1.0",
     "node": "^21.6.2",
+    "nookies": "^2.5.2",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
